--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-circular-progress": "^1.4.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-curved-bottom-bar": "^3.2.7",
+    "react-native-date-picker": "^5.0.7",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-gifted-charts": "^1.4.10",
@@ -36,7 +37,6 @@
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-iap": "^12.15.4",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.4",
