--- a/ios/RNAdmob/Info.plist
+++ b/ios/RNAdmob/Info.plist
@@ -31,10 +31,17 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<false/>
+		<true/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+
+	<!-- added this LSMinimumSystemVersion -->
+	<key>LSMinimumSystemVersion</key>
+	<string>12.0.0</string>
+
+
+
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>SKAdNetworkItems</key>
