--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.12.0",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-select-dropdown": "^4.0.1",
